--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
     <section>
 
         <!--Article-1-->
-        <article>
-            <div>A1</div>
-            <div>A2</div>
-            <div>A3</div>
-            <div>A4</div>
-            <div>A5</div>
-            <div>A6</div>
+        <article class="article-1">
+            <div class="a1">A1</div>
+            <div class="a2">A2</div>
+            <div class="a3">A3</div>
+            <div class="a4">A4</div>
+            <div class="a5">A5</div>
+            <div class="a6">A6</div>
         </article>
 
         <!--Aside-1-->
-        <aside>
-            <div>B1</div>
-            <div>B2</div>
-            <div>B3</div>
+        <aside class="aside-1">
+            <div class="b1">B1</div>
+            <div class="b2">B2</div>
+            <div class="b3">B3</div>
         </aside>
 
         <!--Article-2-->
-        <article>
+        <article class="article-2">
             <div>
-                <div>C</div>
+                <div class="c">C</div>
             </div>
         </article>
 
         <!--Aside-2-->
-        <aside>
-            <div>D1</div>
-            <div>D2</div>
+        <aside class="aside-2">
+            <div class="d1">D1</div>
+            <div class="d2">D2</div>
         </aside>
     </section>
 
