--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <!--Article-2-->
         <article class="article-2">
-            <div>
-                <div class="c">C</div>
-            </div>
+            <div class="c1">c1</div>
+            <div class="c2">c2</div>
+            <div class="c1">c3</div>
         </article>
 
         <!--Aside-2-->
