change div content

--- a/index.html
+++ b/index.html
@@ -19,38 +19,51 @@
 
         <!--Article-1-->
         <article class="article-1">
-            <div class="a1">A1</div>
-            <div class="a2">A2</div>
-            <div class="a3">A3</div>
-            <div class="a4">A4</div>
-            <div class="a5">A5</div>
-            <div class="a6">A6</div>
+            <div class="a1">
+                <h1>HTML</h1>
+            </div>
+            <div class="a2">
+                <h1>CSS</h1>
+            </div>
+            <div class="a3">
+                <h1>GIT</h1>
+            </div>
+            <div class="a4">
+                <h1>GIT-HUB</h1>
+            </div>
+            <div class="a5">
+                <h1>TERMINAL</h1>
+            </div>
+            <div class="a6">
+                <h1>NANO / VIM</h1>
+            </div>
         </article>
 
         <!--Aside-1-->
         <aside class="aside-1">
-            <div class="b1">B1</div>
-            <div class="b2">B2</div>
-            <div class="b3">B3</div>
+            <div class="b1"></div>
+            <div class="b2"></div>
+            <div class="b3"></div>
         </aside>
 
         <!--Article-2-->
         <article class="article-2">
-            <div class="c1">c1</div>
-            <div class="c2">c2</div>
-            <div class="c1">c3</div>
+            <div class="c1">Front-end</div>
+            <div class="c2">Back-end</div>
+            <div class="c1">Database</div>
         </article>
 
         <!--Aside-2-->
         <aside class="aside-2">
-            <div class="d1">D1</div>
-            <div class="d2">D2</div>
+            <div class="d1">Motivation</div>
+            <div class="d2">Try and Learn</div>
         </aside>
     </section>
 
     <!--Footer-->
     <footer>
-        <h1>Footer</h1>
+        <a href="https://becode.org/">@Becode</a>
+        <p>Cantersteen 10, 1000 Brussels</p>
     </footer>
 </body>
 </html>
