--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>CSS Grid</title>
 </head>
 <body>
 
     <!--Header-->
     <header>
-        <h1>Header</h1>
+        <h1>Becode</h1>
     </header>
 
     <!--Section-->
